Fix wrap

--- a/styles/ProgramFormula.scss
+++ b/styles/ProgramFormula.scss
@@ -47,7 +47,6 @@
     justify-content: space-between;
     row-gap: 2rem;
     padding: 14px;
-    height: 205px;
     border-radius: 4px;
     background: $header-color-gray-02;
     box-shadow: 2px 2px 10px 0px #00000026 inset;
@@ -73,6 +72,8 @@
     }
     .formula-dnd-nums-symbols {
       width: 100%;
+      flex-wrap: wrap;
+      row-gap: 0.5rem;
       display: flex;
       justify-content: end;
       column-gap: 0.5rem;
